<resources>
    <string name="app_name">LanetBit</string>
    <string name="dummy_name">Lorem ipsum dolor sit amet consetetur</string>
    <string name="email_id_name">Mobile/Email</string>
    <string name="password_name">Password</string>
    <string name="signin_name">Sign In</string>
    <string name="forget_password_name">Forgot Password?</string>
    <string name="or_name">or</string>
    <string name="user_name_title">Full Name</string>
    <string name="email_title">Email</string>
    <string name="mobile_no_title">Mobile Number</string>
    <string name="upload_doc_title">Upload Document</string>
    <string name="male_name">Male</string>
    <string name="female_name">Female</string>
    <string name="signup_name">Sign Up</string>
    <string name="enter_otp_name">Enter OTP</string>
    <string name="resend_otp_name">Resent OTP</string>
    <string name="confirm_otp_name">Confirm</string>
    <string name="gender_title">Gender</string>
    <string name="forgot_password_name">Forgot Password</string>
    <string name="registered_mobile_name">Enter your registered mobile number</string>
    <string name="send_name">Send</string>
    <string name="enter_password_name">Enter New Password</string>
    <string name="new_password_name">New Password</string>
    <string name="confirm_password_name">Confirm New Password</string>
    <string name="signin_google_name">Sign in with Google</string>
    <string name="order_book_title">Order Book</string>
    <string name="buy_title">Buy</string>
    <string name="sell_title">Sell</string>
    //ANDROID TOKEN
    <!--    <string name="default_web_client_id">362428050198-vg4t1aoro46img411gdvgbnqopjs1ps1.apps.googleusercontent.com</string>-->
    //WEB TOKEN
    <string name="default_web_client_id">362428050198-dne9p0mgturitudvvpbiu59g869vpu0a.apps.googleusercontent.com</string>
    <string name="skip_name">skip</string>
    <string name="title_kyc_name">Complete your KYC</string>
    <string name="title_kyc_verify_name">We need to verify your ID</string>
    <string name="kyc_desc_name">In order to create an account, we need to be 100% sure that  <b><i>You are You.</i></b> As we\'re a financial service, We\'hv to comply with <font fgcolor='#07A521'>KYC and AML Requirements.</font>\n \nYou Just Need to go through some steps which will help us to build a secure system together</string>
    <string name="title_verify_name">Verify</string>
    <string name="title_kyc_dont_name">I don\'t have my ID with me</string>
    <string name="title_document_verify">Document Verification Process</string>
    <string name="subtitle_document_verify">Select the type of document you wish\nto scan</string>
    <string name="kyc_doc_verify_detail"><![CDATA[We need to determine if an identity document is authentic and belong to you.\n \nUnited Kingdom has been set an issuing country of your documents. ]]></string>
    <string name="passport_name">Passport</string>
    <string name="driver_license_name">Driver License</string>
    <string name="identity_card_name">Identity Card</string>
    <string name="edit_profile_name">EDIT PROFILE</string>
    <string name="last_loggedin_title">Last logged in Mxx xx, xxxx</string>
    <string name="dashboard_title">Dashboard</string>
    <string name="buy_sell_title">Buy/Sell</string>
    <string name="converter_title">Converter</string>
    <string name="wallet_title">My Wallet</string>
    <string name="setting_title">Settings</string>
    <string name="log_out_title">Log Out</string>
    <string name="log_out_subtitle">Are you sure you want to log out?</string>
    <string name="cancel_title">Cancel</string>
    <string name="ok_title">Ok</string>
    <string name="currency_preference_name">Currency Preference</string>
    <string name="share_app_name">Share App</string>
    <string name="contact_us_name">Contact us</string>
    <string name="terms_condition_name"><![CDATA[Terms & Conditions]]></string>
    <string name="faq_name">FAQ\'s</string>
    <string name="help_name">Help</string>
    <string name="legal_name">Legal</string>
    <string name="push_notification_name">Push Notification</string>
    <string name="two_fa_head_title">Two-Factor Authentication</string>
    <string name="two_fa_desc_title">Scan the QR code below with an authentication application, such as Google Authenticator, On your Phone.</string>
    <string name="type_code_title">Type the code created by the authentication app</string>
    <string name="verification_code_name">Verification Code</string>
    <string name="update_profile_name">Upload Profile Image</string>
    <string name="full_name">Full Name</string>
    <string name="country_name">Country</string>
    <string name="save_exit_name">Save and Exit</string>
    <string name="edit_profile_title">Edit Profile</string>
    <string name="security_2fa_name">Security 2FA</string>
    <string name="bitcoin_title">Bitcoin</string>
    <string name="title_proof_identity">Proof of Identity</string>
    <string name="proof_identity_detail">In order to completed your registration, Please Upload a copy of your identity with a clear Selfie photo to proof the document holder</string>
    <string name="upload_kyc_ide_title">Upload Proof identity</string>
    <string name="accept_only_title">We accept only</string>
    <string name="upload_kyc_desc_title">ID card, Driving license, Passport</string>
    <string name="selfie_with_identity_title">A Selfie with your identity</string>
    <string name="selfie_with_identity_desc">Please make sure that every detail of the ID document is clearly visible.</string>
    <string name="selfie_take_identity_title">Take selfie with identity</string>
    <string name="selfie_take_desc_title">Please note Screenshots, mobile phone bills, and insurance are NOT accepted for verification.</string>
    <string name="uploaded_title">Uploaded</string>
    <string name="kyc_doc_id_title">Doc Id</string>
    <string name="submit_title">Submit</string>
    <string name="one_hours_title">1H</string>
    <string name="one_day_title">1D</string>
    <string name="one_month_title">1M</string>
    <string name="start_date_title">Start Date</string>
    <string name="end_date_title">End Date</string>
    <string name="ask_title">Ask</string>
    <string name="bid_title">Bid</string>
    <string name="amount_title">Amount</string>
    <string name="price_title">Price</string>

    <string name="btc_title">BTC</string>
    <string name="amount_to_buy_title">Amount to buy in USD</string>
    <string name="bank_account_title">Bank Account</string>
    <string name="account_holder_name">Account Holder Name</string>
    <string name="account_no">Account No</string>
    <string name="bank_name">Bank Name</string>
    <string name="routing_no">Routing No</string>
    <string name="swift_bic_code">Swift or Bic Code</string>
    <string name="submit_des_title">Are you sure want to submit ?</string>
    <string name="thank_you_title">Thank You!</string>
    <string name="payment_desc_title">Your Payment has been sent</string>
    <string name="continue_title">Continue</string>
    <string name="status_title">Status</string>
    <string name="instrument_title">Instrument</string>
    <string name="order_type_title">Order Type</string>
    <string name="order_history_title">Order History</string>
    <string name="transaction_history_title">Transaction History</string>
    <string name="lanetbit_wallet_title">Lanetbit Wallet</string>
    <string name="email_us_name">Email us</string>
    <string name="call_us_name">Call us</string>
    <string name="contact_desc_name">Eleit sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim adenim minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat do eiusmod tempor.\n \nWhen one door of happiness closes, another opens, but often we look so long at the closed door that we do not see the one that has been opened for us.</string>
    <string name="may_use_service_name">Who May Use the Services</string>
    <string name="may_use_service_desc">When one door of happiness closes, another opens, but often we look so long at the closed door that we do not see the one that has been opened for us.</string>
    <string name="may_use_service_desc_step"><font color='white'>• Step 1:</font> You may use the Services only if you agree to form a binding contract with us and are not a person barred from receiving services under the laws of the applicable jurisdiction. \n \n<font color='white'>• Step 2:</font> Our Privacy Policy describes how we handle the information you provide to us when you use our Services.</string>
    <string name="privacy_name">Privacy</string>
    <string name="privacy_desc">When one door of happiness closes, another opens, but often we look so long at the closed door that we do not see the one that has been opened for us. You may use the Services only if you agree to form a binding contract with us and are not a person barred from receiving services under the laws of the applicable jurisdiction.</string>
    <string name="faq1_name">What is a Lanetbit Service?</string>
    <string name="faq1_desc">Sed ut perspiciatis unde omnis iste natus error sit voluptat m accusantium doloremque laudantium, totam rem aperi am eaque ipsa quae ab illoquae accusantium. \n \nSed ut perspiciatis unde omnis iste natus error sit voluptat m accusantium doloremque laudantium, totam rem iste natus.</string>
    <string name="faq2_name">Who May Use the Services?</string>
    <string name="faq3_name">What is a complete subscription plan?</string>
    <string name="faq4_name">What is a Lanetbit category?</string>
    <string name="faq5_name">What is a complete subscription plan?</string>
    <string name="customer_care_name">Customer Care</string>
    <string name="help_desc">Eleit sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim adenim minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat do eiusmod tempor \n \nLorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna lab aliqua. Ut enim ad minim veniam, quise nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequ sitar aspernatur aut odit aut nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat aspernatur dol aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro elite labore quisquam est, qui dolorem ipsum quia</string>
    <string name="head_title">Heading</string>
    <string name="crypto_title">Crypto to Crypto</string>
    <string name="amount_to_buy">Amount to buy</string>
    <string name="address_name">Address</string>
    <string name="currency_from_title">Currency From</string>
    <string name="currency_to_title">Currency To</string>
    <string name="money_received_title">Money Received</string>
    <string name="money_sent_title">Money Sent</string>
    <string name="total_fee_title">Total Fee</string>
    <string name="allow_permission">Please allow permission.</string>
    <string name="registered_email_name">Enter Registered Email Id </string>
    <string name="change_password_name">Change Password</string>
    <string name="current_password_name">Current Password</string>
    <string name="dashboard_name">Dashboard</string>

</resources>
