<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorSignInBg"
    tools:context=".activity.BankAccountActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <ImageView
        android:id="@+id/img_back_btn"

        android:layout_width="@dimen/dimen_28"
        android:layout_height="@dimen/dimen_22"
        android:layout_margin="@dimen/dimen_8"
        android:src="@drawable/ic_back"
        android:paddingTop="@dimen/padding_5"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dimen_18"
        android:layout_marginRight="@dimen/dimen_18"
        android:orientation="vertical">
    <in.lanetbit.utils.customView.TextViewUbuntuMedium
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_16"
        android:layout_weight="1"
        android:text="@string/bank_account_title"
        android:textColor="@color/colorTextGrey"
        android:textSize="@dimen/text_x_large"
        />
        <in.lanetbit.utils.customView.EditTextUbuntuLight
            android:id="@+id/ed_account_holder_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_border"
            android:hint="@string/account_holder_name"
            android:textColor="@color/colorTextGrey"
            android:textColorHint="@color/colorTextGrey"
            android:textSize="@dimen/text_normal"
            android:padding="@dimen/padding_12"
            android:layout_marginTop="@dimen/dimen_22"
            />
        <in.lanetbit.utils.customView.EditTextUbuntuLight
            android:id="@+id/ed_account_no"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_border"
            android:hint="@string/account_no"
            android:textColor="@color/colorTextGrey"
            android:textColorHint="@color/colorTextGrey"
            android:textSize="@dimen/text_normal"
            android:padding="@dimen/padding_12"
            android:layout_marginTop="@dimen/dimen_12"
            android:inputType="textPassword"
            />
        <in.lanetbit.utils.customView.EditTextUbuntuLight
            android:id="@+id/ed_bank_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_border"
            android:hint="@string/bank_name"
            android:textColor="@color/colorTextGrey"
            android:textColorHint="@color/colorTextGrey"
            android:textSize="@dimen/text_normal"
            android:padding="@dimen/padding_12"
            android:layout_marginTop="@dimen/dimen_12"
            />
        <in.lanetbit.utils.customView.EditTextUbuntuLight
            android:id="@+id/ed_routing_no"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_border"
            android:hint="@string/routing_no"
            android:textColor="@color/colorTextGrey"
            android:textColorHint="@color/colorTextGrey"
            android:textSize="@dimen/text_normal"
            android:padding="@dimen/padding_12"
            android:layout_marginTop="@dimen/dimen_12"
            android:inputType="textPassword"

            />
        <in.lanetbit.utils.customView.EditTextUbuntuLight
            android:id="@+id/ed_swift_bic_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_border"
            android:hint="@string/swift_bic_code"
            android:textColor="@color/colorTextGrey"
            android:textColorHint="@color/colorTextGrey"
            android:textSize="@dimen/text_normal"
            android:padding="@dimen/padding_12"
            android:layout_marginTop="@dimen/dimen_12"
            android:inputType="textPassword"

            />
        <in.lanetbit.utils.customView.TextViewUbuntuMedium
            android:id="@+id/tv_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/green_button_bg"
            android:text="@string/submit_title"
            android:textSize="@dimen/text_normal_17"
            android:gravity="center"
            android:textColor="@color/colorWhite"
            android:padding="@dimen/padding_12"
            android:textAllCaps="true"
            android:layout_marginTop="@dimen/dimen_58"
            android:visibility="visible"
            />


    </LinearLayout>
    </LinearLayout>
</ScrollView>