<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:layout_margin="@dimen/dimen_28"
    android:orientation="vertical">

    <in.lanetbit.utils.customView.TextViewUbuntuRegular
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_28"
        android:gravity="center"
        android:text="@string/submit_des_title"
        android:textSize="@dimen/text_normal"
        android:textColor="@color/colorTextGrey" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="right"
        android:layout_marginTop="@dimen/dimen_38"
        android:layout_marginRight="@dimen/dimen_12">
        <in.lanetbit.utils.customView.TextViewUbuntuMedium
            android:id="@+id/tv_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel_title"
            android:textAllCaps="true"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/text_normal_17"
            />
        <in.lanetbit.utils.customView.TextViewUbuntuMedium
            android:id="@+id/tv_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ok_title"
            android:textAllCaps="true"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/text_normal_17"
            android:layout_marginLeft="@dimen/dimen_12"
            />
    </LinearLayout>

</LinearLayout>